--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>
+      My_Tab
+    </title>
+  </head>
+  
+  <body>
+    
+    
+  </body>
+  
+  
+</html>
